[gd_scene load_steps=6 format=3 uid="uid://c5bigiv5pu2i6"]

[ext_resource type="Texture2D" uid="uid://cwb6kulxh2siq" path="res://Assets/menu_background.png" id="1_hml2o"]
[ext_resource type="Theme" uid="uid://bncxovbewxu8b" path="res://Assets/new_theme.tres" id="2_uu75u"]
[ext_resource type="Script" path="res://Scenes/Ui/exit_game.gd" id="4_j0q05"]
[ext_resource type="Script" path="res://Scenes/Ui/Button_nb_player.gd" id="4_jtht8"]
[ext_resource type="Script" path="res://Scenes/Ui/Button.gd" id="4_k7ggi"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 33.0
offset_top = 28.0
offset_right = 1081.0
offset_bottom = 555.0

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
offset_top = 1.0
offset_right = 1143.0
offset_bottom = 584.0
texture = ExtResource("1_hml2o")
expand_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 2
offset_left = 378.0
offset_top = 122.0
offset_right = 621.0
offset_bottom = 158.0
theme = ExtResource("2_uu75u")
text = "Bonjour, bienvenu dans le jeu"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 864.0
offset_top = 332.0
offset_right = 1013.0
offset_bottom = 441.0

[node name="start_game" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Appuie pour jouer"
script = ExtResource("4_k7ggi")

[node name="exit_game" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Appuie pour jouer"
script = ExtResource("4_j0q05")

[node name="nb_player" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "nombre joueur =1"
script = ExtResource("4_jtht8")

[connection signal="focus_entered" from="VBoxContainer/start_game" to="VBoxContainer/start_game" method="_on_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/start_game" to="VBoxContainer/start_game" method="_on_focus_exited"]
[connection signal="pressed" from="VBoxContainer/start_game" to="VBoxContainer/start_game" method="_on_pressed"]
[connection signal="pressed" from="VBoxContainer/exit_game" to="VBoxContainer/exit_game" method="_on_pressed"]
[connection signal="focus_entered" from="VBoxContainer/nb_player" to="VBoxContainer/nb_player" method="_on_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/nb_player" to="VBoxContainer/nb_player" method="_on_focus_exited"]
